# hydroponic-onboard

./: README.md  To-Do.md
backend/: .env.example  README.md  Tasks.md  alembic.ini  main.py  pyproject.toml
backend/config/: config.py  db.py
backend/migrations/: env.py
backend/migrations/versions/: 81dc49a9feb9_create_all_tables.py
backend/models/: __init__.py  hydroponic.py
backend/routes/: hydroponic.py
backend/schemas/: __init__.py  hydroponic.py
backend/services/: __init__.py  hydroponic_service.py
backend/test/: conftest.py  test_hydroponic_routes.py  test_level_1_app_structure.py  test_level_2_sensor_schema.py  test_level_3_sensor_api.py  test_level_4_sensor_storage.py
backend/utils/: __init__.py  deps.py
esp/: Tasks.md
frontend/: .gitignore  README.md  Tasks.md  index.html  package-lock.json  package.json  playwright.config.js
frontend/public/: README.md
frontend/scripts/: download-openapi.mjs
frontend/src/: App.vue  README.md  style.css
frontend/src/api/: README.md  index.ts
frontend/src/api/models/: HydroponicCreate.ts  HydroponicListResponse.ts  HydroponicRead.ts
frontend/src/api/services/: DefaultService.ts  HydroponicsService.ts
frontend/src/assets/: README.md
frontend/src/components/: README.md
frontend/src/router/: README.md
frontend/src/services/: README.md  hydroponicApi.ts
frontend/src/utils/: README.md
frontend/src/views/: README.md
frontend/tests/: level-1-structure.spec.js  level-2-format.spec.js  level-3-dummy-data.spec.js  level-4-realtime-data.spec.js
