[project]
name = "hydroponic-onboard-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "alembic-postgresql-enum>=1.10.0",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.3",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
